Add fsl,sdio-async-interrupt-enabled to F&S-Azurewave Wlan boards
We were experiencing some mdio bus errors on some F&S boards with
Azurewave Wlan chip. Adding this device tree flag seems to resolve that
issue.

From the DTS flag README:

Recommend for SDIO cards that enables SDIO async interrupt for SDR104
and SDR50 operating modes. SDIO async interrupt uses DAT[1] to signal
the card's interrupt. uSDHC tuning mechanism must use DAT[0] and CMD
signals to avoid a possible conflict and incorrect delay line calculated
by the uSDHC auto tuning mechanism. Enabling this device tree property
is only recommended for layouts that are matching the SD interface
length.

--- a/arch/arm/boot/dts/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/picocoremx6ul100.dts
@@ -929,6 +929,7 @@ wvga {					\
 	vqmmc-supply = <&reg_vref_1v8>;	/* VDD_IO */
 	wifi-host; /* needed for BCM wifi cards */
 	enable-sdio-wakeup;
+	fsl,sdio-async-interrupt-enabled;
 #endif
 #ifdef CONFIG_PICOCOREMX6UL100_SD_A
 	vmmc-supply = <&reg_vref_3v3>;	/* VDD */
