--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
@@ -777,6 +777,7 @@
 #ifdef CONFIG_PICOCOREMX8MM_WLAN
 	enable-sdio-wakeup;
 	cap-power-off-card;
+	fsl,sdio-async-interrupt-enabled;
 #endif
 	status = "okay";
 
