--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -1039,6 +1039,7 @@
 	keep-power-in-suspend;
 	non-removable;
 	cap-power-off-card;
+	fsl,sdio-async-interrupt-enabled;
 	bus-width = <4>;
 	status = "okay";
 #ifdef CONFIG_ARMSTONEMX8MP_WLAN_MARVELL_DRV
