--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4.dts
@@ -898,6 +898,7 @@
 #ifdef CONFIG_PICOCOREMX8MN_WLAN
 	enable-sdio-wakeup;
 	cap-power-off-card;
+	fsl,sdio-async-interrupt-enabled;
 #endif
 	status = "okay";
 
