fs-gal1.dtb: Set GPIOs for mPCIe & M.2
It is currently possible to detect devices connected to mPCIe
(right-handed). This requires some GPIOs to be set

- GPIO "PCIe1_PWR_EN" must be high to enable the mPCIe (right-handed)
PWR-	Switch.
- GPIO "PCIe1_PWR_EN" must be high to enable mPCIe/M.2 (left-handed)
PWR-	Switch.

This is solved with a fixed-regulator with regulator-always-on property.

The Layerscape-PCIe driver does not handle supply (regulator) properties.
To clear a reset of a connected PCIe device, gpio-hogs are used to raise
the PERST signal.

The Layerscape-PCIe driver does not handle clock properties, so therefore the
GPIO "PCIe_CLKGEN" is always pulled down to enable the VERSACLOCK
outputs for mPCIe and M.2.

The sim-switch signal is also pulled down with a gpio-hog to enable
right- and left-handed sim sockets as default.

All GPIO signals that are defined as a gpio-hog or regulator are marked
as "used" and cannot be modified at runtime.

With these changes, PCIe devices can be recognised and the corresponding
drivers automatically loaded.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -96,6 +96,7 @@
 			
 			gpio = <&gpio4 11 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
+			regulator-always-on;
 		};
 
 		reg_pcie2: pcie2_pwr {
@@ -106,6 +107,7 @@
 
 			gpio = <&gpio4 14 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
+			regulator-always-on;
 		};
 
 		reg_usb1: usb1_pwr {
@@ -208,16 +210,27 @@
 			gpios = <1 GPIO_ACTIVE_HIGH>;
 			output-low;
 			line-name = "EMMC-RST-B_GPIO";
-		};
+		}; */
 
 		pcie_clkgen_hog {
 			gpio-hog;
-			gpios = <2 ( GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN )>;
-			output-low;
-			line-name = "PCIe_CLKGEN";	
+			gpios = <2 GPIO_ACTIVE_LOW>;
+			output-high;
 		};
 
-		pcie1_wake_hog {
+		PCIe1_rst_hog {
+			gpio-hog;
+			gpios = <12 GPIO_ACTIVE_LOW>;
+			output-low;
+		};
+
+		PCIe2_rst_hog {
+			gpio-hog;
+			gpios = <15 GPIO_ACTIVE_LOW>;
+			output-low;
+		};
+
+		/*pcie1_wake_hog {
 			gpio-hog;
 			gpios = <13 GPIO_ACTIVE_HIGH>;
 			output-low;
@@ -243,22 +256,14 @@
 			gpios = <18 GPIO_ACTIVE_HIGH>;
 			input;
 			line-name = "PCIe2_CLKREQ";
+		};*/
+
+		sim_switch {
+			/* Activate left- and right-handed SIM */
+			gpio-hog;
+			gpios = <3 GPIO_ACTIVE_HIGH>;
+			output-low;
 		};
-
-		// rgmii_phy_rst_hog {
-		// 	gpio-hog;
-		// 	gpios = <19 GPIO_ACTIVE_HIGH>;
-		// 	output-low;
-		// 	line-name = "RGMII-PHY-RESET";
-		// };
-
-		// sim_switch {
-		// 	Activate left- and right-handed SIM*
-		// 	gpio-hog;
-		// 	gpios = <3 GPIO_ACTIVE_HIGH>;
-		// 	output-low;
-		// 	line-name = "eSIM_Switch";
-		// }; */
 	};
 
 	temp-sensor@2c {
@@ -292,11 +297,11 @@
 };
 
 &pcie1 {
-	reset-gpio = <&gpio4 12 ( GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN )>;
-};
+	status = "okay";
+	};
 
 &pcie2 {
-	reset-gpio = <&gpio4 15 ( GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN )>;
+	status = "okay";
 };
 
 &enetc_mdio_pf3 {
