fsgal_defconfig: set CONFIG_BROADCOM_PHY
The bel SFP-1GBT-05 that we use for internal tests uses a BCM54616S PHY.
This PHY requires the specific Broadcom driver.

If other SFP devices are used with other PHYs, then the drivers must be
set in the Linux configurations.

--- a/arch/arm64/configs/fsgal_defconfig
+++ b/arch/arm64/configs/fsgal_defconfig
@@ -2444,12 +2444,12 @@ CONFIG_SFP=y
 # CONFIG_ADIN_PHY is not set
 # CONFIG_AQUANTIA_PHY is not set
 # CONFIG_AX88796B_PHY is not set
-# CONFIG_BROADCOM_PHY is not set
+CONFIG_BROADCOM_PHY=y
 # CONFIG_BCM54140_PHY is not set
 CONFIG_BCM7XXX_PHY=m
 # CONFIG_BCM84881_PHY is not set
 # CONFIG_BCM87XX_PHY is not set
-CONFIG_BCM_NET_PHYLIB=m
+CONFIG_BCM_NET_PHYLIB=y
 # CONFIG_CICADA_PHY is not set
 # CONFIG_CORTINA_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
