Delete GPU and Display Nodes in GAL devicetree
GAL-BOARDS have no Display connections and the LS10x7 Processors have no
GPU.

We should not use Display Port and GPU nodes if they are not available
and not needed.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -12,6 +12,14 @@
 #include <dt-bindings/leds/common.h>
 #include <dt-bindings/net/mscc-phy-vsc8531.h>
 
+/delete-node/ &dpclk;
+/delete-node/ &hdptx0;
+/delete-node/ &malidp0;
+
+&soc {
+	/delete-node/ gpu@f0c0000;
+};
+
 / {
      model = "F&S GAL1 Board";
      compatible = "fus,gal1", "fsl,ls1028a";
