Fix pcore8mp bluethooth error after suspend to mem
The usdhc device hast tobe powered during the suspend or else we get
bluetooth errors when waking up. This is already done for efus and
armstone.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -989,6 +989,10 @@
 #ifdef CONFIG_PICOCOREMX8MP_WLAN
 	vmmc-supply = <&reg_wlan_pdn>;
 	fsl,sdio-async-interrupt-enabled;
+	pm-ignore-notify;
+	keep-power-in-suspend;
+	non-removable;
+	cap-power-off-card;
 #else
 	vmmc-supply = <&reg_vref_3v3>;
 #endif
