fs-gal1.dtb: Set USB-Interface to HOST
This is required for USB3.0 functionality.

In addition: One gpio-line name for &gpio3 was missing and is now
corrected.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -313,7 +313,7 @@
 &gpio3 {
 	gpio-line-names =
 		/* Line 0-12 */
-		"","","","","","","","","","","","",
+		"","","","","","","","","","","","","",
 		/* Line 13 -16 for GPIO */
 		"GPIO-7",
 		"GPIO-6",
@@ -455,9 +455,11 @@
 };
 
 &usb0 {
+	dr_mode = "host";
 	status = "okay";
 };
 
 &usb1 {
+	dr_mode = "host";
 	status = "okay";
 };
