Change userspace-consumer.c to support devicetree
This should allow acces to the USB/PCIe-regulators in Userspace.
The Patch was provided by NXP under following post:

https://community.nxp.com/t5/i-MX-Processors-Knowledge-Base/regulator-userspace-consumer/ta-p/1389948

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -119,7 +119,7 @@
 			regulator-always-on;
 		};
 
-		pcie1_pwr@2 {
+		pcie1_pwr: pcie1_pwr@2 {
 			compatible = "regulator-fixed";
 			regulator-name = "PCIe1_PWR";
 			regulator-min-microvolt = <3300000>;
@@ -128,10 +128,9 @@
 			gpio = <&gpio4 11 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 			regulator-boot-on;
-			regulator-always-on;
 		};
 
-		pcie2_pwr@3 {
+		pcie2_pwr: pcie2_pwr@3 {
 			compatible = "regulator-fixed";
 			regulator-name = "PCIe2_PWR";
 			regulator-min-microvolt = <3300000>;
@@ -140,21 +139,43 @@
 			gpio = <&gpio4 14 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 			regulator-boot-on;
-			regulator-always-on;
 		};
 
-		usb1_pwr@4 {
+		usbint_pwr: usb1_pwr@4 {
 			compatible = "regulator-fixed";
 			regulator-name = "USB1_PWR";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
+			regulator-min-microvolt = <5000000>;
+			regulator-max-microvolt = <5000000>;
 
 			gpio = <&gpio3 18 GPIO_ACTIVE_HIGH>;
 			regulator-boot-on;
 			enable-active-high;
-			regulator-always-on;
 		};
 
+	};
+
+	usbint_vbus {
+        compatible = "regulator-output";
+        regulator-name = "USBVBUS-Enable";
+        regulator-supplies = "usbvbus";
+        usbvbus-supply = <&usbint_pwr>;
+        regulator-boot-on;
+	};
+
+    pcie1_pwr {
+        compatible = "regulator-output";
+        regulator-name = "PCIe1-Enable";
+        regulator-supplies = "pcie1pwr";
+        pcie1pwr-supply = <&pcie1_pwr>;
+        regulator-boot-on;
+	};
+
+    pcie2_pwr {
+        compatible = "regulator-output";
+        regulator-name = "PCIe2-Enable";
+        regulator-supplies = "pcie2pwr";
+        pcie2pwr-supply = <&pcie2_pwr>;
+        regulator-boot-on;
 	};
 
 	thermal-zones {
@@ -265,7 +286,7 @@
 		reg = <0x2c>;
 		interrupt-parent = <&gpio4>;
 		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
-		vcc-supply = <&regulator_3v3>;
+		vs-supply = <&regulator_3v3>;
 	};
 
 	rtc@51 {
