Disable busfreq scaling for picocoremx8mm-ddr3l
There seem to be issues with the bus frequency scaling for picocoremx8mm
with DDR3L ram. The board freezes if display and ethernet are turned
off.

As we do not plan to use ddr3l in the future, we disable bus frequency
scaling for now for picocoremx8mm-ddr3l boards.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l.dts
@@ -179,6 +179,11 @@
 		stdout-path = &uart1;
 	};
 #endif
+	/* Busfreq scaling is not working with DDR3L-RAM so we
+     * disable it for now */
+	busfreq {
+		status="disabled";
+	};
 
 	reserved-memory {
 		/* global autoconfigured region for contiguous allocations */
