Use new naming convention for PicoCoreMX8MM boards
We now use use the suffix -ddr3l or lpddr4 to distinguish between
picocoremx8mm and picocoremx8mx boards. So also use this notation for
board_name and model in the device trees.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l.dts
@@ -136,7 +136,7 @@
 #include <dt-bindings/usb/pd.h>
 
 / {
-	model = "F&S PicoCoreMX8MX";
+	model = "F&S PicoCoreMX8MM-DDR3L";
 	compatible = "fus,imx8mm-picocoremx8mm", "fsl,imx8mm";
 
 	aliases {
@@ -169,7 +169,7 @@
 	/* -------------------- BOARD INFO -------------------- */
 	bdinfo {
 		compatible = "bdinfo";
-		board_name = "picocoremx8mx";
+		board_name = "picocoremx8mm-ddr3l";
 	};
 
 #if 0
