--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -315,7 +315,7 @@
 #endif
 
 	sound-hdmi {
-		compatible = "fsl,imx-audio-cdnhdmi";
+		compatible = "fsl,imx-audio-hdmi";
 		model = "audio-hdmi";
 		audio-cpu = <&aud2htx>;
 		hdmi-out;
