fs-gal1.dts: disable temp sensor
The temp sensor is only used on development boards or on boards with
special configuration definitions. Therefore it will be disabled as
default.

If a board definition contains the sensor, the note is activated via
U-Boot.

The interrupt property is also removed, since the device does not need
to detect any defined temperature thresholds

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -282,11 +282,11 @@
 	};
 
 	temp-sensor@2c {
+		/* enabled in U-Boot */
 		compatible = "nxp,pct2075";
 		reg = <0x2c>;
-		interrupt-parent = <&gpio4>;
-		interrupts = <23 IRQ_TYPE_EDGE_FALLING>;
 		vs-supply = <&regulator_3v3>;
+		status = "disabled";
 	};
 
 	rtc@51 {
