define gpio name TA_Prog

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -329,12 +329,18 @@
 &gpio3 {
 	gpio-line-names =
 		/* Line 0-12 */
-		"","","","","","","","","","","","","",
+		"","","","","","","","","","",
+		"","","",
 		/* Line 13 -16 for GPIO */
 		"GPIO-7",
 		"GPIO-6",
 		"GPIO-4",
-		"GPIO-5";
+		"GPIO-5",
+		/*Line 17*/
+		"TA_PROG_1V8",
+		/*Line 18-31*/
+		"","","","","","","","","","",
+		"","","","";
 };
 
 &duart0 {
