Add assertion and deassertion timing for the realtek phy
The realtek phy was not able to be reset correctly because the
devicetree was missing some delays. Thus the driver did not wait until
the phy was ready. Add the delays so the phy can reset.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -311,6 +311,8 @@
 		/* Realtek RTL8211FSI-PHY */
 		reg = <0x1>;
 		reset-gpios = <&gpio4 19 GPIO_ACTIVE_HIGH>;
+		reset-assert-us = <50000>;
+		reset-deassert-us = <200000>;
 	};
 
 	qsgmii_phy0: ethernet-phy@10 {
