Added Pin for EPDC_Epaper_Demo
The pin for the demo is added on pte23.

It is also necessary to pay attention that the device number of gpiochip
is the same on the board.

Example:
On 8ULP_demo.h
	#define GPIO_PIN 23
	#define GPIO_CHIP_PATH "/dev/gpiochip2"

On the Linux command "gpioinfo"
	gpiochip2 - 32 lines:
        line  22:      unnamed "epdc-pwrup"  output  active-high [used]
The device number must be the same

--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-epdc.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-epdc.dtsi
@@ -80,7 +80,17 @@
 };
 
 &iomuxc1 {
-		pinctrl_epdc0: epdcgrp0 {
+
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hoggrp>;
+
+	pinctrl_hoggrp: hoggpp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE23__PTE23 0x3
+		>;
+	};
+	
+	pinctrl_epdc0: epdcgrp0 {
 		fsl,pins = <
 			MX8ULP_PAD_PTF23__EPDC0_D0	0x43
 			MX8ULP_PAD_PTF22__EPDC0_D1	0x43
