--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -133,6 +133,7 @@ wvga {					\
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
+#include <fsversion.h>
 
 #ifdef CONFIG_PICOCOREMX6UL_ULL
 #include "imx6ull.dtsi"
@@ -325,6 +326,7 @@ wvga {					\
 	bdinfo {
 		compatible = "bdinfo";
 		board_name = "PicoCoreMX6UL";
+		dts_version = FS_LINUX_VERSION;
 	};
 
 };
@@ -341,7 +343,7 @@ wvga {					\
 };
 
 &cpu0 {
-	dc-supply = <&reg_dvfs>;
+	//dc-supply = <&reg_dvfs>;
 };
 
 &clks {
@@ -691,6 +693,10 @@ wvga {					\
 			timing0: CONFIG_PICOCOREMX6UL_LCD_TIMING;
 		};
 	};
+};
+
+&pxp {
+	status = "okay";
 };
 #endif /* CONFIG_PICOCOREMX6UL_LCDIF0 == DISPLAY_LCD */
 
