Improve fus armv7 defconfigs
- Add CONFIG_GPIO_MXC or else GPIOs will not work

--- a/arch/arm/configs/fsimx6_etnaviv_defconfig
+++ b/arch/arm/configs/fsimx6_etnaviv_defconfig
@@ -327,6 +327,7 @@ CONFIG_SPI_IMX=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_MXC=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_SENSORS_MAG3110=y
 CONFIG_THERMAL=y
