--- a/arch/arm/configs/fsimx7ulp_defconfig
+++ b/arch/arm/configs/fsimx7ulp_defconfig
@@ -316,6 +316,7 @@ CONFIG_SPI_FSL_LPSPI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_MXC=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
