--- a/arch/arm/configs/fsvybrid_defconfig
+++ b/arch/arm/configs/fsvybrid_defconfig
@@ -314,6 +314,7 @@ CONFIG_SPI_FSL_DSPI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_MXC=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_THERMAL=y
 CONFIG_WATCHDOG=y
