fs-gal1.dtb: Add GPIO Label for USB1_PWR_EN

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -275,10 +275,11 @@
 		"GPIO-6",
 		"GPIO-4",
 		"GPIO-5",
-		/*Line 17*/
+		/*Line 17 - 18*/
 		"TA_PROG_1V8",
-		/*Line 18-31*/
-		"","","","","","","","","","",
+		"USB1_PWR_EN",
+		/*Line 19-31*/
+		"","","","","","","","","",
 		"","","","";
 };
 
